Add updated notebook

--- a/Vencke_Python_Assignment.ipynb
+++ b/Vencke_Python_Assignment.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "!pip install biopython \n",
+    "!pip install --quiet biopython\n",
     "\n",
     "from Bio import SeqIO\n",
     "from Bio.Data import CodonTable\n",
