Add updated notebook

--- a/Vencke_Python_Assignment.ipynb
+++ b/Vencke_Python_Assignment.ipynb
@@ -38,19 +38,9 @@
    "execution_count": 1,
    "id": "b9d91278",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: biopython in /home/venckegr/.local/lib/python3.10/site-packages (1.85)\n",
-      "Requirement already satisfied: numpy in /home/venckegr/.local/lib/python3.10/site-packages (from biopython) (2.2.5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install --quiet biopython\n",
+    "#!pip install biopython\n",
     "\n",
     "from Bio import SeqIO\n",
     "from Bio.Data import CodonTable\n",
